@@ -5,6 +5,13 @@
 # Distributed under the GPL v2
 # $Id$
 
+  14 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_compile.sh,
+  gen_initramfs.sh:
+  dmraid is entirely broken if you try to use the system static
+  LVM/device-mapper. Instead start always building LVM2 for the initramfs,
+  using DESTDIR for cleaner install. Dead code paths for old LVM2 build not
+  removed yet until more users have tested.
+
   12 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_compile.sh:
   More UTILS_CROSS_COMPILE prefix on strip calls.
 
